fixed cards background color not covering entire height of the page

--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -3,7 +3,7 @@
     /* background: linear-gradient(-110deg, #293241 30%, #98C1D9 30%), ;height: 100vh;    width: 100%; */
     /* background: linear-gradient(-110deg, #98C1D9 60%, rgba(0, 0, 0, 0) 60%), linear-gradient(-110deg, #3D5A80 61%, #F8C2B4 61%); */
     background-color: #02040F;
-    height: 100vh;
+    height: 100%;
   }
   
   h1 {
